--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,32 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+# library 폴더를 무시하지 않음
+!library/
+
+# Debug 폴더를 무시하지 않음
+!Debug/
+
+# Debug 폴더에서 무시할 목록
+!Debug/*
+!Debug/DearsGameEngine.idb
+!Debug/DearsGameEngine.lib
+!Debug/DearsGameEngine.pdb
+!Debug/GameEngineDemo.exe
+!Debug/GameEngineDemo.pdb
+!Debug/TestEngine.exe
+!Debug/TestEngine.pdb
+
+# Release 폴더를 무시하지 않음
+!Release/
+
+# Release 폴더에서 무시할 목록
+!Release/*
+!Release/DearsGameEngine.lib
+!Release/DearsGameEngine.pdb
+!Release/GameEngineDemo.exe
+!Release/GameEngineDemo.pdb
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
@@ -361,4 +387,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# 리소스 파일 제외
 /TestAsset
+/Release/GameEngineDemo.exe
